# AutomotiveTraining-dashboard-app

./: projektisuunnitelma_2022.docx
dashboard-app/: Backend.qml  CMakeLists.txt  ContactList.qml  ControlPanel.qml  DebugView.qml  IndicatorIcon.qml  IndicatorPanel.qml  RpmGauge.qml  SpeedGauge.qml  backend.cpp  backend.h  main.cpp  main.qml
